2006-05-20  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (dispatch_atom): Allow numbers with leading +

	* src/dfsch.c: Fixed bug in string_hash
	(symbol_finalizer): GC'd symbols

2006-05-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_form_p): form? type predicate

	* dfsch/dfsch.h: Correct declarations in header for new list functions
	Corrected other broken headers.

	* src/dfsch.c (dfsch_reverse): list reversal function
	(dfsch_mem*) Membership checking functions

	* scm/test.scm: More tests

	* src/hash.c (native_make_hash): mode argument was ignored

	* src/number.c, dfsch/number.h: Comparison functions reimplemented 
	(native_max, native_min): max and min functions

	* src/number.c (native_even_p, native_odd_p): even? and odd?
	(dfsch__number_eqv_p): eqv? works correctly

	* scm/test.scm: Naming change

	* src/control.c (native_form_do): do iteration form

2006-05-18  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): Better support for platforms with
	>32b word
	(closure_write): dtto.

	* src/number.c (native_acos, native_asin): inverse trigonometrics
	(native_atan): arcus tangent
	(native_sqrt): Square root
	(native_expt): Power (expt)
	(native_zero_p, native_positive_p, native_negative_p): some basic
	predicates

2006-05-17  Ales Hakl  <ales at hakl dot net>

	* src/number.c (native_log): Natural logarithm
	(native_tan, native_cos, native_sin): Trigonometric functions

	* src/strings.c: Added DFSCH_ARG_END to mark ends of argument lists

	* src/number.c (native_abs): Absolute value function
	(native_exp): Exponent

	* NEWS: Release 0.2.0-pre2

2006-05-14  Ales Hakl  <ales at hakl dot net>

	* {dfsch,src}/parse.[hc]: Renamed from stream.[ch] to parse.[ch]

	* src/control.c (native_macro_case): slightly simplified
	when and unless macros

2006-05-13  Ales Hakl  <ales at hakl dot net>

	* scm/lib.scm (define-struct): Defaulting of slot values
	(define-struct): Indicate slot name for unknown slots
