@@ -1,5 +1,7 @@
 2006-05-20  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c: Fixed some warnings introduced by GC'd symbols
+
 	* src/parse.c (dispatch_atom): Allow numbers with leading +
 
 	* src/dfsch.c: Fixed bug in string_hash
